--- a/README
+++ b/README
@@ -1,3 +1,14 @@
 little airwar is a pure javascript airwar game. I wrote it just for fun. 
+Right now, the game is still very simple, I just wrote stage 1, and the difficulty level can not be changed. I plan to enhance this feature in near future( wish my work allows me to do that ). 
+
+ Operations : 
+ w - foward
+ s - backward
+ a - left
+ d - right
+ j - fire
+ k - bomb
+
+
 
 :)
