--- a/README
+++ b/README
@@ -9,6 +9,9 @@ Right now, the game is still very simple, I just wrote stage 1, and the difficul
  j - fire
  k - bomb
 
+ Browser Support :
+ Firefox, Chrome, Safari, IE9. Sorry for IE8 and Opera.  
+
 
 
 :)
